fixed column spacing issue.

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ textarea:focus, input:focus {
 #project-section {
 	justify-content: center;
 	opacity: 0.9;
-    margin: 20px 30px 10px 30px;
+    margin: 20px 10px 10px 10px;
     padding: 10px 0px 10px 0px;
 }
 
@@ -159,11 +159,11 @@ p {
   color: #fff;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1400px) {
 	.thumb {
 	  text-align: center;
-	  width: 500px;
-	  height: 420px;
+	  width: 260px;
+	  height: 240px;
 	  margin: 10px;
 	  padding: 2px;
 	  box-shadow:  3px 6px 6px #878391;
